src/styles/main.css
/* CSS Variables */
:root {
  --color-text: #111;
  --color-background: #fdfdfd;
  --color-border: #e8e8e8;
  --color-link: #1e57a0;
  --color-link-visited: #1756a9;
  --color-link-hover: #2196f3;
  --color-icon: #828282;
  --color-header-title: #424242;
  --color-footer-text: #828282;

  --spacing-base: 30px;
  --spacing-small: 15px;
  --spacing-xs: 5px;

  --width-wrapper: 800px;
  --width-social: 600px;

  --transition: 0.2s all;
}

/* Reset some basic elements */
body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
hr,
dl,
dd,
ol,
ul {
  margin: 0;
  padding: 0;
}

/* Basic styling */
body {
  font: 400 16px/1.5 system-ui, sans-serif;
  color: var(--color-text);
  background-color: var(--color-background);
  -webkit-font-feature-settings: "kern" 1;
  -moz-font-feature-settings: "kern" 1;
  -o-font-feature-settings: "kern" 1;
  font-feature-settings: "kern" 1;
  font-kerning: normal;
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

/* Headings */
h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 400;
  margin-bottom: var(--spacing-small);
}

/* Paragraph spacing */
p,
blockquote,
pre,
ul,
ol,
dl,
figure,
.highlight {
  margin-bottom: var(--spacing-small);
}

/* Main element */
main {
  display: block;
  /* Default value of `display` of `main` element is 'inline' in IE 11. */
}

/* Lists */
ul,
ol {
  margin-left: 30px;
}

li > ul,
li > ol {
  margin-bottom: 0;
}

/* Links */
a {
  color: var(--color-link);
  text-decoration: none;
  transition: var(--transition);
}

a:visited {
  color: var(--color-link-visited);
}

a:hover {
  color: var(--color-link-hover);
  text-decoration: underline;
  transition: var(--transition);
}

.social-media-list a:hover {
  text-decoration: none;
}

.social-media-list a:hover .username {
  text-decoration: underline;
}

/* Wrapper / Container */
.wrapper {
  max-width: calc(var(--width-wrapper) - (var(--spacing-base) * 2));
  margin-right: auto;
  margin-left: auto;
  padding-right: var(--spacing-base);
  padding-left: var(--spacing-base);
}

.wrapper--full {
  padding: 0;
  max-width: 100%;
  justify-content: center;
  display: flex;
  align-content: center;
}

@media screen and (max-width: 800px) {
  .wrapper {
    max-width: calc(var(--width-wrapper) - var(--spacing-base));
    padding-right: 15px;
    padding-left: 15px;
  }
}

/* Clearfix */
.footer-col-wrapper:after,
.wrapper:after {
  content: "";
  display: table;
  clear: both;
}

/* Icons */
.svg-icon {
  width: 16px;
  height: 16px;
  display: inline-block;
  fill: var(--color-icon);
  padding-right: 5px;
  vertical-align: text-top;
}

.social-media-list li + li {
  padding-top: var(--spacing-xs);
}

/* Site header */
.site-header {
  border-bottom: 1px solid var(--color-border);
  min-height: 55.95px;
  position: relative;
}

.site-title {
  font-size: 26px;
  font-weight: 300;
  line-height: 54px;
  letter-spacing: -1px;
  margin-bottom: 0;
  float: left;
}

.site-title,
.site-title:visited {
  color: var(--color-header-title);
}

.site-nav {
  position: absolute;
  top: 9px;
  right: 15px;
  background-color: var(--color-background);
  border: 1px solid var(--color-border);
  border-radius: 5px;
  text-align: right;
}

.site-nav .nav-trigger {
  display: none;
}

.site-nav .menu-icon {
  display: none;
}

.site-nav .page-link {
  color: var(--color-text);
  line-height: 1.5;
  display: block;
  padding: var(--spacing-xs) 10px;
}

.site-nav .page-link:not(:last-child) {
  margin-right: 20px;
}

.theme-toggle {
  background: none;
  border: none;
  padding: 0;
  cursor: pointer;
}

@media screen and (max-width: 800px) {
  .site-nav label[for="nav-trigger"] {
    display: block;
    float: right;
    width: 36px;
    height: 36px;
    z-index: 2;
    cursor: pointer;
  }

  .site-nav .menu-icon {
    display: block;
    float: right;
    width: 36px;
    height: 26px;
    line-height: 0;
    padding-top: 10px;
    text-align: center;
  }

  .site-nav .menu-icon > svg {
    fill: var(--color-header-title);
  }

  .site-nav input ~ .trigger {
    clear: both;
    display: none;
  }

  .site-nav input:checked ~ .trigger {
    display: block;
    padding-bottom: var(--spacing-xs);
  }

  .site-nav .page-link:not(:last-child) {
    margin-right: 0;
  }
}

/* Site footer */
.site-footer {
  border-top: 1px solid var(--color-border);
  padding: var(--spacing-base) 0;
}

.footer-heading {
  font-size: 18px;
  margin-bottom: var(--spacing-small);
}

.contact-list,
.social-media-list {
  list-style: none;
  margin-left: 0;
}

.footer-col-wrapper {
  font-size: 15px;
  color: var(--color-footer-text);
  margin-left: -15px;
}

.footer-col {
  float: left;
  margin-bottom: var(--spacing-small);
  padding-left: 15px;
}

.footer-col-1 {
  width: calc(35% - (30px / 2));
}

.footer-col-2 {
  width: calc(20% - (30px / 2));
}

.footer-col-3 {
  width: calc(45% - (30px / 2));
}

@media screen and (max-width: 800px) {
  .footer-col-1,
  .footer-col-2 {
    width: calc(50% - (30px / 2));
  }

  .footer-col-3 {
    width: calc(100% - (30px / 2));
  }
}

@media screen and (max-width: 800px) {
  .footer-col {
    float: none;
    width: calc(100% - (30px / 2));
  }
}

/* Page content */
.page-content {
  padding: var(--spacing-base) 0;
  flex: 1;
}

@media screen and (min-width: 800px) {
  .wrapper--full {
    padding: 0;
    max-width: 100%;
    justify-content: center;
    display: flex;
    align-content: center;
  }
}

/* Home sections */
.home {
  display: flex;
  flex-direction: column;
}

.home--social {
  display: grid;
  grid-template-columns: 50% 50%;
  grid-gap: 15px;
  padding: 4%;
  margin-right: 0.5em;
  max-width: var(--width-social);
}

.home--content {
  padding: 1.5em;
}

.u-url {
  display: none;
}

